# Philosophers

./: CMakeLists.txt  main.c
includes/: errors.h  parser.h  philosopher.h  philosophers.h  solver.h  timer.h  utils.c  utils.h
srcs/: parser.c  philosopher.c  philosophers.c  solver.c  timer.c  utils.c
